--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ html {
   scroll-snap-type: y mandatory;
   overflow-y: auto;
   overflow-x: hidden;
-  position: relative;
 }
 
 body {
@@ -13,6 +12,4 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-snap-type: y mandatory;
-  position: relative;
-  overflow-x: hidden;
 }
